[gd_scene load_steps=9 format=2]

[ext_resource path="res://Levels/World1/Area4/Level4/Level4.gd" type="Script" id=1]
[ext_resource path="res://Elements/Blocks/TileMaps/Obstacles/Obstacles.tscn" type="PackedScene" id=2]
[ext_resource path="res://Elements/Blocks/BreakableBlock/BreakableBlock.tscn" type="PackedScene" id=3]
[ext_resource path="res://Elements/Arrow/Arrow_SingleDirction/ArrowSingleDirection.tscn" type="PackedScene" id=4]
[ext_resource path="res://Elements/Arrow/Arrow_Back/Arrow_Back.tscn" type="PackedScene" id=5]
[ext_resource path="res://ball/ball.tscn" type="PackedScene" id=6]
[ext_resource path="res://Star/Satrs.tscn" type="PackedScene" id=8]
[ext_resource path="res://Star/Star.tscn" type="PackedScene" id=9]

[node name="Level4" type="Node2D"]
script = ExtResource( 1 )

[node name="Obstacles" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 65536, 0, 0, 65543, 0, 0, 65544, 0, 0, 65551, 0, 0, 65552, 0, 0, 65559, 0, 0, 65560, 0, 0, 65567, 0, 0, 131072, 0, 0, 131079, 0, 0, 131080, 0, 0, 131087, 0, 0, 131088, 0, 0, 131095, 0, 0, 131096, 0, 0, 131103, 0, 0, 196608, 0, 0, 196615, 0, 0, 196616, 0, 0, 196623, 0, 0, 196624, 0, 0, 196631, 0, 0, 196632, 0, 0, 196639, 0, 0, 262144, 0, 0, 262151, 0, 0, 262152, 0, 0, 262159, 0, 0, 262160, 0, 0, 262167, 0, 0, 262168, 0, 0, 262175, 0, 0, 327680, 0, 0, 327687, 0, 0, 327688, 0, 0, 327695, 0, 0, 327696, 0, 0, 327703, 0, 0, 327704, 0, 0, 327711, 0, 0, 393216, 0, 0, 393223, 0, 0, 393224, 0, 0, 393231, 0, 0, 393232, 0, 0, 393239, 0, 0, 393240, 0, 0, 393247, 0, 0, 458752, 0, 0, 458759, 0, 0, 458760, 0, 0, 458767, 0, 0, 458768, 0, 0, 458775, 0, 0, 458776, 0, 0, 458783, 0, 0, 524288, 0, 0, 524295, 0, 0, 524296, 0, 0, 524303, 0, 0, 524304, 0, 0, 524311, 0, 0, 524312, 0, 0, 524319, 0, 0, 589824, 0, 0, 589831, 0, 0, 589832, 0, 0, 589839, 0, 0, 589840, 0, 0, 589847, 0, 0, 589848, 0, 0, 589855, 0, 0, 655360, 0, 0, 655367, 0, 0, 655368, 0, 0, 655375, 0, 0, 655376, 0, 0, 655383, 0, 0, 655384, 0, 0, 655391, 0, 0, 720896, 0, 0, 720903, 0, 0, 720904, 0, 0, 720911, 0, 0, 720912, 0, 0, 720919, 0, 0, 720920, 0, 0, 720927, 0, 0, 786432, 0, 0, 786439, 0, 0, 786440, 0, 0, 786447, 0, 0, 786448, 0, 0, 786455, 0, 0, 786456, 0, 0, 786463, 0, 0, 851968, 0, 0, 851975, 0, 0, 851976, 0, 0, 851983, 0, 0, 851984, 0, 0, 851991, 0, 0, 851992, 0, 0, 851999, 0, 0, 917504, 0, 0, 917511, 0, 0, 917512, 0, 0, 917519, 0, 0, 917520, 0, 0, 917527, 0, 0, 917528, 0, 0, 917535, 0, 0, 983040, 0, 0, 983047, 0, 0, 983048, 0, 0, 983055, 0, 0, 983056, 0, 0, 983063, 0, 0, 983064, 0, 0, 983071, 0, 0, 1048576, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048607, 0, 0, 1114112, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114143, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0 )

[node name="ArrowSingleDirection1" parent="." instance=ExtResource( 4 )]
position = Vector2( 480, 360 )

[node name="Arrow_Back1" parent="." instance=ExtResource( 5 )]
position = Vector2( 160, 600 )

[node name="Arrow_Back2" parent="." instance=ExtResource( 5 )]
position = Vector2( 480, 160 )

[node name="Arrow_Back3" parent="." instance=ExtResource( 5 )]
position = Vector2( 800, 600 )

[node name="Arrow_Back4" parent="." instance=ExtResource( 5 )]
position = Vector2( 1120, 160 )

[node name="Satrs" parent="." instance=ExtResource( 8 )]

[node name="Star1" parent="Satrs" instance=ExtResource( 9 )]
position = Vector2( 480, 600 )

[node name="Star2" parent="Satrs" instance=ExtResource( 9 )]
position = Vector2( 160, 160 )

[node name="Star3" parent="Satrs" instance=ExtResource( 9 )]
position = Vector2( 1120, 600 )

[node name="Star4" parent="Satrs" instance=ExtResource( 9 )]
position = Vector2( 800, 160 )

[node name="Ball" parent="." instance=ExtResource( 6 )]
position = Vector2( 800, 360 )

[node name="BreakableBlock1" parent="." instance=ExtResource( 3 )]
position = Vector2( 160, 380 )
scale = Vector2( 3, 1 )

[node name="BreakableBlock2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1120, 380 )
scale = Vector2( 3, 1 )
